--- a/style.css
+++ b/style.css
@@ -35,8 +35,40 @@ h1
 {
     padding-top: 260px;
     padding-bottom: 20px; 
-    font-family: papyrus; 
     font-size: 65px;
+    color:#30E3CA;
+}
+
+#cloud1
+{
+    position: absolute; 
+    left:68%; 
+    top: 160px; 
+    width: 120px; 
+    height: 120px;
+}
+
+#cloud2 
+{
+    position: absolute; 
+    left:20%; 
+    top: 310px; 
+    width: 120px; 
+    height: 120px;
+}
+
+h1, p
+{
+    font-family: sans-serif;
+}
+
+#mountains
+{
+    max-width: 60%;
+    position: absolute; 
+    left:25%; top: 400px; 
+    width: 1000px; 
+    height: 500px;
 }
 
 a
@@ -83,9 +115,54 @@ hr
     margin:auto;
 }
 
+#yane
+{
+    max-width: 10%; 
+    border-radius: 50%;
+    position: absolute; 
+    left:44.5%;
+    top: 1000px; 
+    width: 200px; 
+    height: 200px;
+}
+
 p
 {
-    color: #11999E;
-    font-family: Copperplate, Papyrus, fantasy; 
+    color: #40514E;
     font-size: 20px;
+}
+
+#contact
+{
+    margin: 0% 15% 0% 35%; 
+    font-size: 25px;
+}
+
+#skills
+{
+    margin: 0% 0% 0% 10%; 
+    font-size: 25px;
+}
+
+#develop
+{
+    font-size: 25px;
+    text-align: left; 
+    padding-left: 25%; 
+    padding-top: 90px;
+}
+
+#design
+{
+    font-size: 25px;
+    text-align: left;
+    padding-left: 45%;
+    padding-top: 120px;
+}
+
+.help
+{
+    color: #11999E; 
+    font-size: 45px; 
+    font-weight: bold;
 }
