--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     padding: 0px;
 }
 
+
 .box
 {
     width: 100px; 
@@ -120,7 +121,7 @@ hr
     max-width: 10%; 
     border-radius: 50%;
     position: absolute; 
-    left:44.5%;
+    left: 45%;
     top: 1000px; 
     width: 200px; 
     height: 200px;
@@ -156,8 +157,22 @@ p
 {
     font-size: 25px;
     text-align: left;
-    padding-left: 45%;
+    padding-left: 60%;
     padding-top: 120px;
+}
+
+#p1
+{
+    text-align: left; 
+    margin-left: 60%;
+    margin-right: 20%;
+}
+
+#p2
+{
+    text-align: left; 
+    margin-left: 25%;
+    margin-right: 55%;
 }
 
 .help
