--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 {
     margin: 0px;
     padding: 0px;
+    font-family: papyrus,serif;
 }
 
 
@@ -57,11 +58,6 @@ h1
     top: 310px; 
     width: 120px; 
     height: 120px;
-}
-
-h1, p
-{
-    font-family: sans-serif;
 }
 
 #mountains
