--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 {
     margin: 0px;
     padding: 0px;
-    font-family: Garamond,serif;
+    font-family: 'Cormorant Garamond',serif;
 }
 
 
@@ -127,7 +127,7 @@ hr
 p
 {
     color: #40514E;
-    font-size: 20px;
+    font-size: 24px;
 }
 
 #contact
